# Qiaolab_skills

./: .cursorrules  .gitignore  .windsurfrules  CLAUDE.md  CODEX.md  README.md  pyproject.toml  temp_mapping.txt
.github/: copilot-instructions.md
Qiaolab_skills/: README.md
data/processed/: basic-mechanism-burst.csv  burst-terms-2025-2026.csv  major_cluster_names.csv  term-2025-2026.csv  treemap_data.csv
reports/: basic-mechanism-report.txt  cluster_map_utf8.txt  cluster_names.txt  cluster_summary.txt  comprehensive-report.txt  report-basic-clinical.txt  semantic-analysis-report.txt
scripts/: main.py  query_basic_entropy.py
scripts/figures/: draw_final_umap.py  fig1_nolabels.py  fig1_streamgraph.py  fig3b_clinical_rising.py  fig4_horizon.py  figS1_treemap.py  figS2_waterfall.py  fig_connected_scatter.py  fig_parallel_coords.py  fig_ridgeline_entropy.py  fig_rising.py  figure_burst.py  fix_strips.py  gen_figure.py  make_all_figures.py  make_all_figures_v2.py  make_all_figures_v3.py  plot_dumbbell.py  plot_rising.py  plot_rising_final.py  plot_rising_v2.py  plot_rising_v3.py  plot_umap.py  plot_umap_english.py  plot_umap_hulls.py  plot_umap_large.py  redraw_umap.py  redraw_umap_single.py  tile_plot.py
scripts/pipeline/: analyze_2025_2026.py  analyze_basic_clinical.py  analyze_rising.py  basic_mechanism_analysis.py  cluster_analysis.py  (+5 more)
skills/: 01-term-analysis-pipeline.md  02-umap-semantic-clustering.md  03-streamgraph-paper-figure.md  04-burst-signal-detection.md  05-basic-clinical-classification.md  06-figure-iteration-lessons.md  AI4asking.md
(+8 files in other folders)
