[project]
name = "term-clustering"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "distinctipy>=1.3.4",
    "hdbscan>=0.8.44",
    "kaleido>=1.3.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "squarify>=0.4.4",
    "umap-learn>=0.5.12",
]
